force-app/src/objects/APXTConga4__VersionedData__c.object
<CustomObject>
    <fields>
        <fullName>APXTConga4__Key__c</fullName>
        <label>Flag Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Kind__c</fullName>
        <label>Feature kind</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Raw__c</fullName>
        <label>Raw Flag Object</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Version__c</fullName>
        <label>Flag Version</label>
        <precision>15</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>VersionedData</label>
    <nameField>
        <label>Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VersionedData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>